[tool.poetry]
name = "jjduo"
version = "0.1.0"
description = ""
authors = ["vivid <jeajun18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"
django-stubs = "^5.1.1"
coverage = "^7.6.7"

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
